# dottie

./: .gitignore  .profile  .tmux.conf  .zshenv  .zshrc  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.config/: starship.toml
.github/workflows/: publish.yml
design/: roadmap.md
lyn/script/: tdir.sh
src/: dir.rs  main.rs
src/cli/: info.rs  link.rs  mod.rs  run.rs
