[package]
name = "dottie"
version = "0.0.1"
edition = "2024"
build = "build.rs"
description = "A package based dotfile manager"
license = "MIT OR Apache-2.0"

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
built = { version = "0.8", features = ["chrono"] }
owo-colors = "4.2"
# Error Handling
thiserror = "2.0"
color-eyre = "0.6"
eyre = "0.6"
# Logging
log = "0.4"
simplelog = "0.12"
