[package]
name = "dottie"
version = "0.0.2"
edition = "2024"
build = "build.rs"
description = "A package based dotfile manager"
license = "MIT OR Apache-2.0"
authors = ["Qisheng Liu"]
repository = "https://github.com/Saplyn/dottie"
categories = ["config", "command-line-utilities", "dotfile"]
exclude = ["/.github/", "/design/", "/deny.toml"]

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
built = { version = "0.8", features = ["chrono"] }
owo-colors = "4.2"
# Error Handling
thiserror = "2.0"
color-eyre = "0.6"
eyre = "0.6"
# Logging
log = "0.4"
env_logger = "0.11"
# Other
chrono = "0.4"
signal-hook = "0.3"
nix = { version = "0.30", features = ["signal"] }
